--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.example.qlem.pairsgame.CustomView
+    <com.example.qlem.pairsgame.GameBoardView
         android:id="@+id/game_board"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
