--- a/app/src/main/res/drawable/card_face_down.xml
+++ b/app/src/main/res/drawable/card_face_down.xml
@@ -8,7 +8,7 @@
         android:bottomLeftRadius="5dp" />
     <stroke
         android:width="3dp"
-        android:color="@android:color/white" />
+        android:color="@color/cream" />
     <solid
-        android:color="@color/cardFaceDownColor"/>
+        android:color="@color/blue"/>
 </shape>
